--- a/index.html
+++ b/index.html
@@ -11,3 +11,9 @@
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+
+<!-- GitHub Repository Link -->
+<!-- https://github.com/rownakabdullahomi/TaskLy_TaskManagement_Client -->
+
+<!-- Firebase Live Link -->
+<!-- https://task-management-ae3a9.web.app -->
